// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShoppingItem Component renders checked item when checked property is true 1`] = `
<li>
  <h2
    style={
      Object {
        "textDecoration": "line-through",
      }
    }
  >
    test-item
  </h2>
  <button
    type="button"
  >
    Check
  </button>
  <button
    type="button"
  >
    Delete
  </button>
</li>
`;

exports[`ShoppingItem Component renders empty given no item 1`] = `
<li>
  <h2
    style={
      Object {
        "textDecoration": undefined,
      }
    }
  />
  <button
    type="button"
  >
    Check
  </button>
  <button
    type="button"
  >
    Delete
  </button>
</li>
`;

exports[`ShoppingItem Component renders the item when supplied 1`] = `
<li>
  <h2
    style={
      Object {
        "textDecoration": false,
      }
    }
  >
    test-item
  </h2>
  <button
    type="button"
  >
    Check
  </button>
  <button
    type="button"
  >
    Delete
  </button>
</li>
`;
